libhdate (1.4.11)

  * Add Ruby bindings
  * Add PHP bindings
  * Add GPL notice to the example files (Bug report: Baruch Even)
  * Add a patch to print todays date in hcal in bold (Patch: Patrik Nilsson)
  * Fix documentation of files and structs (Bug report: Baruch Even)
  * Update Swedish translation (Thanks: Patrik Nilsson)
  
  -- Yaacov Zamir <kzamir@wall.co.il>  Saturday, 5 Jan 2008 22:00
  
libhdate (1.4.10)

  * Move to GPL3 (COPYING, AUTHORS)
      - Add Amos Shapir as author in Authors file
      - Update Amos's email
  * Change defult config options (configure.in)
      - Gettext version used now is 0.17
      - Python, Perl, Pascal bindings now built by default
  * Update the man files (docs/man)
      - add man files for c++ language
      - move all man files to docs/man directory
  * Bug fixes
      - Fix Kislev Hebrew translation misspell (Bug report: Ariel Galola)
      - Fix Julian day calculation (Bug report: Afonso Arantes)
  * Add new events
      - 30 shvat : Family day
      - 12 heshvan : rabin memorial day
      - 29 tamuz : zhabotinsky day
  * Changes to hdate command line utility
      - flag -j print the Julian day number
      - if argument is greater than 100000 it is asumed as Julian day number
      - "hdate -S YEAR" now print out same format as "hebcal -d -h -e YEAR"
  
  -- Yaacov Zamir <kzamir@wall.co.il>  Thusday, 3 January 2008 22:00

libhdate (1.4.9)

  * Fix endianess bug in big endian machins (/examples/hcal/hcal.c and hdate.c)
	
  -- Yaacov Zamir <kzamir@wall.co.il>  Saturday, 7 April 2007 22:00

libhdate (1.4.8)

  * Fix help printing bug: Add new line at the end of hdate help text.
  * Add two new functios to the time of day section:
      hdate_get_utc_sun_time_full - gets the time of first light,
      talit, sunris, sunset, first stars and three stars.
      hdate_get_utc_sun_time_deg - gets the time the sun is on
      some known altitude.
  * Add Times of day to hdate command line tool.